<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/navigation_mnlist"
            android:icon="@drawable/profile"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:title="@string/mnlist" />
        <item
            android:id="@+id/navigation_landmarks"
            android:icon="@drawable/landmark"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:title="@string/landmarks2" />
        <item
            android:id="@+id/navigation_rewards"
            android:icon="@drawable/gallery"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:title="@string/rewards" />
        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/rewards"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:title="@string/about" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/about"
            android:enabled="true"
            app:showAsAction="ifRoom"
            android:title="@string/profile" />

</menu>